# opencv_samples

./: .gitignore  CMakeLists.txt  Readme.md  camera.cpp  camera_mpv.cpp  camera_qt.cpp  main.cpp  video_capture_from_local_file.cpp  watch_mem.sh
