cmake_minimum_required(VERSION 3.13)
project(opencv_samples)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")

add_executable(camera camera.cpp)
add_executable(camera_mpv camera_mpv.cpp)
add_executable(camera_qt camera_qt.cpp)
add_executable(video_capture_from_local_file video_capture_from_local_file.cpp)

find_package(PkgConfig REQUIRED)
find_package(OpenGL REQUIRED)
find_package(GLEW REQUIRED)
find_package(GLUT REQUIRED)
pkg_check_modules(MPV REQUIRED mpv)
pkg_check_modules(QT REQUIRED Qt5Core Qt5Gui Qt5Widgets)
find_package(OpenCV REQUIRED PATHS /usr/local)

foreach (target camera_mpv)
    target_include_directories(${target} PUBLIC ${MPV_INCLUDE_DIRS})
    target_link_libraries(${target} PUBLIC ${MPV_LIBRARIES})
endforeach ()

foreach (target camera video_capture_from_local_file camera_qt)
    target_include_directories(${target} PUBLIC ${OpenCV_INCLUDE_DIRS} ${MPV_INCLUDE_DIRS} ${QT_INCLUDE_DIRS})
    target_link_libraries(${target} PUBLIC ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} ${GLUT_LIBRARIES} ${OpenCV_LIBRARIES} ${MPV_LIBRARIES} ${QT_LIBRARIES})
endforeach ()
